deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-managed-by-service
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: test-managed-by
